--- a/src/_partials/_header.html
+++ b/src/_partials/_header.html
@@ -3,10 +3,17 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>CW3 Empty stack reactive</title>
+        <title>Yo</title>
 
         <link rel="stylesheet" href="styles/main.css" />
         <script src="scripts/main.js" defer></script>
     </head>
 
     <body>
+        <header class="header">
+            <div class="wrapper">
+                <div class="__boite-nom">
+                    <h3>Marc-Olivier Lefebvre</h3>
+                </div>
+            </div>
+        </header>
