--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,4 @@
-{% include "_partials/_header.html" %}
+{% include "_partials/_header.html" %} {% include "_partials/_hero.html" %}
 
 <!-- Votre contenu ici -->
-
 {% include "_partials/_footer.html" %}
