Hero de terminé et header de corrigé

--- a/src/_partials/_header.html
+++ b/src/_partials/_header.html
@@ -12,8 +12,6 @@
     <body>
         <header class="header">
             <div class="wrapper">
-                <div class="__boite-nom">
-                    <h3>Marc-Olivier Lefebvre</h3>
-                </div>
+                    <a href="">Marc-Olivier Lefebvre</a>
             </div>
         </header>
