--- a/src/_partials/_hero.html
+++ b/src/_partials/_hero.html
@@ -1,10 +1,10 @@
 <section class="hero">
     <div class="wrapper">
-        <div class="hero_boite">
-            <div class="hero_contenu">
-                <h1>Mon cahier d'exercice</h1>
-            </div>
-            <img src="../assets/images/ImageHero.jpg" alt="HeroImage" />
+        <div class="hero__media">
+            <img src="assets/images/ImageHero.jpg" alt="hero" />
+        </div>
+        <div class="hero__content">
+            <h1>Mon Cahier d'exercise</h1>
         </div>
     </div>
 </section>
