--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,8 @@
-{% include "_partials/_header.html" %} {% include "_partials/_hero.html" %}
-
-<!-- Votre contenu ici -->
+<!-- Header -->
+{% include "_partials/_header.html" %}
+<!-- Hero -->
+{% include "_partials/_hero.html" %}
+<!-- Section -->
+{% include "_partials/_section.html" %}
+<!-- Footer -->
 {% include "_partials/_footer.html" %}
