Instructions suivi par rapport à la vidéo de fait, continuer le reste du site durant la pause et le soir et j'ai fini

--- a/src/_partials/_section.html
+++ b/src/_partials/_section.html
@@ -1,5 +1,64 @@
 <section class="section">
     <div class="wrapper">
         <h2>Mes laboratoires</h2>
+
+        <div class="cards">
+            <div class="card">
+                <div class="card__media">
+                    <img src="assets/images/labo.png" alt="" />
+                </div>
+                <div class="card__content">
+                    <h3>01 - Laboratoire intro</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis esse velit quibusdam voluptatibus fuga, expedita laudantium
+                        voluptate dolore, perferendis dolor neque officiis labore quasi vero corporis dicta porro animi cupiditate?
+                    </p>
+                    <p class="tag">HTML + CSS</p>
+                    <a href="">Voir le laboratoire</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__media">
+                    <img src="assets/images/labo.png" alt="" />
+                </div>
+                <div class="card__content">
+                    <h3>02 - Laboratoire intro</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis esse velit quibusdam voluptatibus fuga, expedita laudantium
+                        voluptate dolore, perferendis dolor neque officiis labore quasi vero corporis dicta porro animi cupiditate?
+                    </p>
+                    <p class="tag">HTML + CSS</p>
+                    <a href="">Voir le laboratoire</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__media">
+                    <img src="assets/images/labo.png" alt="" />
+                </div>
+                <div class="card__content">
+                    <h3>03 - Laboratoire intro</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis esse velit quibusdam voluptatibus fuga, expedita laudantium
+                        voluptate dolore, perferendis dolor neque officiis labore quasi vero corporis dicta porro animi cupiditate?
+                    </p>
+                    <p class="tag">HTML + CSS</p>
+                    <a href="">Voir le laboratoire</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__media">
+                    <img src="assets/images/labo.png" alt="" />
+                </div>
+                <div class="card__content">
+                    <h3>04 - Laboratoire intro</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis esse velit quibusdam voluptatibus fuga, expedita laudantium
+                        voluptate dolore, perferendis dolor neque officiis labore quasi vero corporis dicta porro animi cupiditate?
+                    </p>
+                    <p class="tag">HTML + CSS</p>
+                    <a href="">Voir le laboratoire</a>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
