début du swiper js pour la partie labo react

--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,7 @@
 {% include "_partials/_hero.html" %}
 <!-- Section -->
 {% include "_partials/_section.html" %}
+<!-- labo react -->
+{% include "_partials/_labo-react.html" %}
 <!-- Footer -->
 {% include "_partials/_footer.html" %}
