Très grand avancement

--- a/src/_partials/_footer.html
+++ b/src/_partials/_footer.html
@@ -1,6 +1,8 @@
     <footer>
         <div class="wrapper">
-            
+            <h2>Contactez-<span class="blanc">moi.</span></h2> 
+            <p>Afin qu’on puisse parler de votre projet.</p>
+            <div class="icones-sociaux"></div>
         </div>
     </footer>
     
