Site presque terminé, corrigé maintenant quelques bug et faire format mobiile

--- a/src/_partials/_footer.html
+++ b/src/_partials/_footer.html
@@ -1,8 +1,18 @@
-    <footer>
+    <footer class="footer">
         <div class="wrapper">
             <h2>Contactez-<span class="blanc">moi.</span></h2> 
-            <p>Afin qu’on puisse parler de votre projet.</p>
-            <div class="icones-sociaux"></div>
+            <p>Afin qu’on puisse parler de <span class="blanc">votre</span> projet.</p> 
+            <div class="icones-sociaux">
+                <svg class="icon">
+                    <use href="#icon-BE"></use>
+                </svg>
+                <svg class="icon">
+                    <use href="#icon-Messenger"></use>
+                </svg>
+                <svg class="icon">
+                    <use href="#icon-IN"></use>
+                </svg>
+            </div>
         </div>
     </footer>
     
