--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-{% include "_partials/_header.html" %}
+{% include "_partials/_header.html" with { title: 'accueil', active: 'accueil' } %}
 <!-- Hero -->
 {% include "_partials/_hero.html" %}
 <!-- Section -->
