--- a/src/_partials/_labo-react.html
+++ b/src/_partials/_labo-react.html
@@ -7,65 +7,62 @@
 
         <div class="swiper js-swiper-page">
             <div class="swiper-wrapper">
-                <a href="#" class="swiper-slide card">
+                <!-- Slide 1 -->
+                <div class="swiper-slide card">
                     <div class="card__media">
-                        <img src="https://picsum.photos/1200/800?grayscale&random=1" alt="" />
+                        <img src="assets/images/img-sem07.png" alt="" />
                     </div>
                     <div class="card__content">
                         <h4>SEM 07 - SITE RÉACTIF</h4>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur
-                            <span class="bold">adipiscing elit. Ultrices lorem non feugiat egestas amet .</span>
+                            <span class="bold">adipiscing elit. Ultrices lorem non feugiat egestas amet.</span>
                         </p>
                         <p class="tag">SCSS + JAVASCRIPT</p>
-                        <button>
+                        <a href="https://mlefebvre.dectim.ca/cours/cw3/sem07/" class="btn" target="_blank">
                             Voir le laboratoire
-                            <svg class="icon">
-                                <use href="#icon-chevron-right"></use>
-                            </svg>
-                        </button>
+                            <svg class="icon"><use href="#icon-chevron-right"></use></svg>
+                        </a>
                     </div>
-                </a>
+                </div>
 
-                <a href="#" class="swiper-slide card">
+                <!-- Slide 2 -->
+                <div class="swiper-slide card">
                     <div class="card__media">
-                        <img src="https://picsum.photos/1200/800?grayscale&random=2" alt="" />
+                        <img src="assets/images/img-sem08.png" alt="" />
                     </div>
                     <div class="card__content">
-                        <h4>SEM 07 - SITE RÉACTIF</h4>
+                        <h4>SEM 08 - SITE RESPONSIVE</h4>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur
-                            <span class="bold">adipiscing elit. Ultrices lorem non feugiat egestas amet .</span>
+                            <span class="bold">adipiscing elit. Ultrices lorem non feugiat egestas amet.</span>
                         </p>
-                        <p class="tag">SCSS + JAVASCRIPT</p>
-                        <button>
+                        <p class="tag">SCSS</p>
+                        <a href="https://mlefebvre.dectim.ca/cours/cw3/sem08/" class="btn" target="_blank">
                             Voir le laboratoire
-                            <svg class="icon">
-                                <use href="#icon-chevron-right"></use>
-                            </svg>
-                        </button>
+                            <svg class="icon"><use href="#icon-chevron-right"></use></svg>
+                        </a>
                     </div>
-                </a>
+                </div>
 
-                <a href="#" class="swiper-slide card">
+                <!-- Slide 3 -->
+                <div class="swiper-slide card">
                     <div class="card__media">
-                        <img src="https://picsum.photos/1200/800?grayscale&random=3" alt="" />
+                        <img src="assets/images/img-sem09.png" alt="" />
                     </div>
                     <div class="card__content">
-                        <h4>SEM 07 - SITE RÉACTIF</h4>
+                        <h4>SEM 09 - SITE SWIPER</h4>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur
-                            <span class="bold">adipiscing elit. Ultrices lorem non feugiat egestas amet .</span>
+                            <span class="bold">adipiscing elit. Ultrices lorem non feugiat egestas amet.</span>
                         </p>
                         <p class="tag">SCSS + JAVASCRIPT</p>
-                        <button>
+                        <a href="https://mlefebvre.dectim.ca/cours/cw3/sem09/" class="btn" target="_blank">
                             Voir le laboratoire
-                            <svg class="icon">
-                                <use href="#icon-chevron-right"></use>
-                            </svg>
-                        </button>
+                            <svg class="icon"><use href="#icon-chevron-right"></use></svg>
+                        </a>
                     </div>
-                </a>
+                </div>
             </div>
             <div class="swiper-pagination"></div>
         </div>
