Correction bug image lors de la mise en ligne

--- a/src/_partials/_section.html
+++ b/src/_partials/_section.html
@@ -8,7 +8,7 @@
         <div class="cards">
             <div class="card">
                 <div class="card__media">
-                    <img src="assets/images/img-sem01.png" alt="semaine01" />
+                    <img src="/assets/images/img-sem01.png" alt="semaine01" />
                 </div>
                 <div class="card__content">
                     <h3>SEM 01 - RÉVISION</h3>
@@ -27,7 +27,7 @@
             </div>
             <div class="card">
                 <div class="card__media">
-                    <img src="assets/images/img-sem02.png" alt="semaine02" />
+                    <img src="/assets/images/img-sem02.png" alt="semaine02" />
                 </div>
                 <div class="card__content">
                     <h3>SEM 02 - TIMTOOLS</h3>
@@ -46,7 +46,7 @@
             </div>
             <div class="card">
                 <div class="card__media">
-                    <img src="assets/images/img-sem03.png" alt="semaine03" />
+                    <img src="/assets/images/img-sem03.png" alt="semaine03" />
                 </div>
                 <div class="card__content">
                     <h3>SEM 03 - PORTFOLIO LOUIS LAJOIE</h3>
@@ -65,7 +65,7 @@
             </div>
             <div class="card">
                 <div class="card__media">
-                    <img src="assets/images/img-sem04.png" alt="semaine04" />
+                    <img src="/assets/images/img-sem04.png" alt="semaine04" />
                 </div>
                 <div class="card__content">
                     <h3>SEM 04 - ICÔNES ET CLASSES JS</h3>
