Problème avec nomenclature ultra caché de réglé......

--- a/src/_partials/_labo-react.html
+++ b/src/_partials/_labo-react.html
@@ -10,7 +10,7 @@
                 <!-- Slide 1 -->
                 <div class="swiper-slide card">
                     <div class="card__media">
-                        <img src="/assets/images/img-sem07.png" alt="" />
+                        <img src="assets/images/img-semSept.PNG" alt="sem07" />
                     </div>
                     <div class="card__content">
                         <h4>SEM 07 - SITE RÉACTIF</h4>
@@ -29,7 +29,7 @@
                 <!-- Slide 2 -->
                 <div class="swiper-slide card">
                     <div class="card__media">
-                        <img src="/assets/images/img-sem08.png" alt="" />
+                        <img src="assets/images/img-semHuit.PNG" alt="sem08" />
                     </div>
                     <div class="card__content">
                         <h4>SEM 08 - SITE RESPONSIVE</h4>
@@ -48,7 +48,7 @@
                 <!-- Slide 3 -->
                 <div class="swiper-slide card">
                     <div class="card__media">
-                        <img src="/assets/images/img-sem09.png" alt="" />
+                        <img src="assets/images/img-semNeuf.PNG" alt="sem09" />
                     </div>
                     <div class="card__content">
                         <h4>SEM 09 - SITE SWIPER</h4>
